[add]position_encoding

--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,23 @@
 # config.yaml
-output_foloder: "test001"
-dataset: "my_1d"
+output_foloder: "train_axis_dim32_uniform01_scale1o2"
+
+# my_1d, wiggle, matern, andrew, agw, origin, axis
+dataset: "axis"
 remark: ""
+condition_scale: 1
+position_encoding: True
+position_encoding_m: 3
 
 # train
 batch: 5
-epochs: 3
+epochs: 40
 flow_modules: '32-32-32-32-32'
 cond_size: 1
 lr: 1.0e-3
 inputDim: 1
-
+add_uniform: True
+uniform_rate: 0.1
+uniform_scale: 1.2
 # eval
 sample_count: 100
 eval_data:
