--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,8 @@ output_folder: "train_my_1d_batch_sample"
 dataset: "my_1d"
 remark: ""
 condition_scale: 1
-position_encode: True
-position_encode_m: 5
+position_encode: False
+position_encode_m: 50
 # linear_encode
 linear_encode: False
 linear_encode_m : 50
@@ -20,9 +20,13 @@ flow_modules: '32-32-32-32-32'
 cond_size: 1
 lr: 1.0e-3
 inputDim: 1
-add_uniform: False
+add_uniform: True
+uniform_scheduler: False
 uniform_rate: 0.1
 # eval
 sample_count: 100
 eval_data:
   count: 300
+
+# cos, ""
+lr_scheduler: ""
