--- a/config/config_cifar_dim32_f512_sampler.yaml
+++ b/config/config_cifar_dim32_f512_sampler.yaml
@@ -1,6 +1,6 @@
 # config.yaml
 time_seed: 0
-output_folder: "train_CIFAR10_512"
+output_folder: "cifar_dim32_f512_sampler"
 
 image_task: True
 workers: 32
@@ -20,7 +20,7 @@ var_scale: 3
 # train
 batch: 256
 epochs: 40
-flow_modules: '512-512-512-512-512'
+flow_modules: '32-32-32-32-32'
 cond_size: 512
 lr: 1.0e-2
 inputDim: 10 # for image N_classes
@@ -35,3 +35,7 @@ eval_data:
 # cos, ""
 lr_scheduler: "cos"
 
+condition_sampler: True
+pre_train_model_path: "./result/cifar_dim32_f512_sampler/encoder_39.pt"
+sampler_path: "./result/cifar_dim32_f512_sampler/sampler_49.pt"
+sampler_dataset: "./result/cifar_dim32_f512_sampler/dataset.npz"
