--- a/config/config_cifar10_noise_resnet.yaml
+++ b/config/config_cifar10_noise_resnet.yaml
@@ -3,8 +3,8 @@ time_seed: 0
 output_folder: "train_CIFAR10_noise"
 workers: 32
 
-# "ce(CrossEntropy), vic, mixup, vic_mixup, auto_drop"
-lossType: "auto_drop" 
+# "ce(CrossEntropy), vic, mixup, vic_mixup"
+lossType: "vic_mixup" 
 
 #noise "cifar-10"
 dataset: "cifar-10"
@@ -14,11 +14,14 @@ remark: ""
 batch: 256
 epochs: 200
 cond_size: 512
-lr: 1.0e-3
+lr: 1.0e-1
 
 # cos, ""
 lr_scheduler: "cos"
 
 # noise
-noise_type: 'sym' #sym  0.2 0.5 0.8 #asym  0.2 0.3 0.4
-percent: 0.5
+noise_type: 'none' #sym  0.2 0.5 0.8 #asym  0.2 0.3 0.4
+percent: 0
+
+# model
+UsePreResNet: true
